--- a/golden/css/style.css
+++ b/golden/css/style.css
@@ -4,24 +4,63 @@ body {
   margin: 0;
 }
 
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 header {
   background: url("../img/first-bg.jpg") no-repeat center top / cover;
   height: 698px;
 }
 
+.typical-h1 {
+  color: #333333;
+  font-size: 40px;
+  padding-top: 120px;
+  margin: 0 0 20px 0;
+}
+
+.typical-p {
+  margin: 0 0 60px 0;
+  font-size: 16px;
+  color: #666666;
+}
+
+header h1 {
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+}
+
+header button {
+  border: 0;
+  border-radius: 5px;
+  background-color: rgb(245, 217, 123);
+  width: 240px;
+  height: 66px;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #333333;
+}
+
 .container {
   width: 930px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .nav-bar-container {
+  padding-top: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .nav-bar {
-  list-style: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,7 +71,67 @@ header {
 }
 
 .nav-link {
+  padding: 0 20px;
   text-decoration: none;
   text-transform: uppercase;
   color: white;
+}
+
+.services-container-cards {
+  margin: 0 0 100px 0 ;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.services-card {
+  width: 27%;
+}
+
+.services-card h2, .about-text h2 {
+  color: #333333;
+  font-size: 18px;
+}
+
+.services-card p, .about-text p, .copyright {
+  color: #666666;
+  font-size: 14px;
+}
+
+.portfolio-images {
+  padding-bottom: 130px;
+}
+
+.portfolio-images img {
+  padding: 0 8px;
+}
+
+.about-us-card {
+  display: flex;
+  align-items: center;
+  margin-bottom: 90px;
+  width: 60%;
+}
+
+.about-us-cards img {
+  height: fit-content;
+}
+
+.right-about {
+  position: relative;
+  left: 40%;
+}
+
+.about-text {
+  text-align: right;
+  padding: 0 40px;
+}
+
+.right-about .about-text {
+  text-align: left;
+}
+
+.copyright {
+  padding-bottom: 100px;
 }
