--- a/gravity/css/main.css
+++ b/gravity/css/main.css
@@ -8,6 +8,34 @@ button {
   background: transparent;
 }
 
+p {
+  color: #818181;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+ul, li {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-style: normal;
+  font-weight: 700;
+  color: #151515;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-size: 38px;
+}
+
+.be-static {
+  position: static;
+}
+
 .btn {
   height: 50px;
   width: 189px;
@@ -21,8 +49,7 @@ button {
 }
 
 .btn:hover {
-  background: #  background: #;
-;
+  background: #291cb7;
   color: #fff;
 }
 
@@ -35,7 +62,7 @@ button {
 }
 
 .offer-cont {
-
+  height: 93.5vh;
 }
 
 .offer-cont__title {
@@ -46,5 +73,184 @@ button {
 }
 
 .offer-cont__text {
+  margin: 30px 0 56px;
+}
+
+.hero {
+  background: url("../img/img1.jpg") no-repeat right top;
+  background-size: 97% 100%;
+  position: absolute;
+  height: 100vh;
+  width: 50%;
+  right: 0;
+  top: 142px;
+}
+
+.video-btn {
+  background: url(../img/video.jpg) no-repeat center center;
+  height: 310px;
+  width: 400px;
+  position: absolute;
+  top: 33%;
+  left: -8%;
+  box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-btn:after {
+  content: "";
+  display: block;
+  background: url(../img/play.svg);
+  height: 65px;
+  width: 65px;
+}
+
+.about {
+  margin-top: 137px;
+}
+
+.about-cont__title {
+  margin-bottom: 30px;
+}
+
+.about-cont__text {
+  margin-right: 95px;
+}
+
+.author {
+  margin-top: 61px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.about-author {
+  margin-left: 31px;
+}
+
+.author-name {
+  font-size: 22px;
+  margin: 0;
+}
+
+.author-work {
+  margin: 0;
+}
+
+.services {
+  margin-top: 142px;
+}
+
+.services-title {
 
 }
+
+.services-title__label {
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  color: #8F8F8F;
+  opacity: 0.7;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.services-title__header {
+  line-height: 50px;
+  margin-bottom: 100px;
+}
+
+.services-list {
+  list-style: none;
+  color: #222222;
+  opacity: 0.5;
+  margin-top: 75px;
+}
+
+.services-list__left {
+  margin-left: 37px;
+}
+
+.services-list__right {
+
+}
+
+.services-list__item {
+  margin-bottom: 20px;
+}
+
+.owl-carousel .item, .owl-item {
+  width: 825px !important;
+}
+
+.owl-nav {
+  display: flex !important;
+  justify-content: start;
+}
+
+.owl-prev {
+  margin-left: 0 !important;
+}
+
+.owl-next {
+  margin: 20px !important;
+}
+
+.services-play {
+  position: absolute;
+  height: 65px;
+  width: 65px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.features {
+  margin-top: 181px;
+}
+
+.features.container {
+  position: relative;
+}
+
+.feature-images {
+  position: absolute;
+  left: 0;
+  background: url(../img/img6.jpg) no-repeat left top;
+  height: 570px;
+  width: 50%;
+}
+
+.features-image {
+  position: absolute;
+  filter: drop-shadow(30px 80px 180px rgba(0, 0, 0, 0.25));
+  padding: 100px 0 0 315px;
+}
+
+.features-cont {
+  padding-top: 38px;
+}
+
+.features-cont__title {
+  margin-bottom: 13px;
+}
+
+.features-cont__text {
+  margin-bottom: 62px;
+}
+
+.features-cont__main__feature__image {
+  margin-right: 30px;
+}
+
+.features-cont__main__feature {
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-weight: 500;
+}
+
+
