--- a/gravity/css/main.css
+++ b/gravity/css/main.css
@@ -266,19 +266,8 @@ h2 {
   font-weight: 500;
 }
 
-.works {
-
-}
-
 .section-works-title {
   color: #8F8F8F;
-}
-
-.work-tabs {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 0 10px 60px;
-  width: 100%;
 }
 
 .work-nav {
@@ -293,7 +282,70 @@ h2 {
 }
 
 .work-nav.active, .work-nav:hover {
-  color: #1434E1;
+  color: #1434E1 !important;
+  background-color: transparent !important;
   opacity: 1;
 }
+
+.works-wrap {
+  position: absolute;
+  display: flex !important;
+  justify-content: space-between !important;
+  flex-wrap: wrap;
+  margin-top: 108px;
+}
+
+.works-wrap.active {
+  z-index: 10;
+}
+
+.works-wrap__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.works-wrap__item img {
+  margin-bottom: 30px;
+  transition: all 0.5s ease;
+}
+
+.works-wrap__item:hover img {
+  transform: translateY(-20px);
+  filter: drop-shadow(-30px 80px 200px rgba(0, 0, 0, 0.25));
+}
+
+.works-wrap__item:after {
+  content: "";
+  visibility: hidden;
+  background: url(../img/play.svg);
+  height: 65px;
+  width: 65px;
+  position: absolute;
+  transition-delay: 0.3s;
+}
+
+.works-wrap__item:hover:after {
+  visibility: visible;
+  transform: translateY(-20px);
+}
+
+.works-end-text {
+  margin-top: 1100px;
+}
+
+.work-end-btn {
+  text-align: end;
+  padding-right: 0;
+}
+
+.work-end-btn .btn {
+  width: 222px;
+}
+
+
+
+
+
+
 
