--- a/gravity/css/main.css
+++ b/gravity/css/main.css
@@ -194,10 +194,6 @@ h3 {
   margin-bottom: 20px;
 }
 
-.services-carousel .item, .services-carousel .owl-stage .owl-item {
-  width: 825px !important;
-}
-
 .owl-nav {
   display: flex !important;
   justify-content: start;
@@ -426,6 +422,42 @@ h3 {
 .footer-logo {
   text-align: center;
 }
+
+
+
+@media screen and (min-width: 1200px) {
+  .services-carousel .item, .services-carousel .owl-stage .owl-item {
+    width: 825px !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .offer-cont {
+    text-align: center;
+    height: auto;
+  }
+
+  .hero {
+    background: url(../img/img1.jpg) no-repeat right top;
+    /* background-size: 97% 100%; */
+    position: relative;
+    height: 100vh;
+    width: 50%;
+    /* right: 0; */
+    /* top: 142px; */
+    height: 10vh;
+    width: 80vw;
+  }
+
+  .services-list__left {
+    margin-left: 0;
+  }
+
+  .services-list {
+    margin-top: 0px;
+  }
+}
+
 
 
 
