--- a/gravity/css/main.css
+++ b/gravity/css/main.css
@@ -303,6 +303,7 @@ h3 {
 }
 
 .works-wrap.active {
+  position: relative;
   z-index: 10;
 }
 
@@ -335,10 +336,6 @@ h3 {
 .works-wrap__item:hover:after {
   visibility: visible;
   transform: translateY(-20px);
-}
-
-.works-end-text {
-  margin-top: 1100px;
 }
 
 .work-end-btn {
@@ -454,6 +451,27 @@ h3 {
   }
 }
 
+@media screen and (max-width: 992px) {
+  .feature-images {
+    position: relative;
+    width: 80vw;
+    height: 73vw;
+    transform: none;
+    background-size: contain;
+  }
+
+  .features-image {
+    right: -5%;
+    top: 15%;
+    width: 50vw;
+    padding: 0;
+  }
+
+  .features-cont {
+    padding-left: 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .offer-cont {
     text-align: center;
@@ -468,6 +486,17 @@ h3 {
     top: 40px;
   }
 
+  .about-image {
+    position: relative;
+    left: 50%;
+    padding-bottom: 20px;
+    transform: translate(-50%);
+  }
+
+  .about-cont__text {
+    margin-right: 0;
+  }
+
   .services-list__left {
     margin-left: 0;
   }
@@ -476,6 +505,22 @@ h3 {
     margin-top: 0px;
   }
 
+  .testimonials-title__label {
+    margin-bottom: 50px;
+  }
+
+  .contributor {
+    margin-top: 80px;
+  }
+
+  .contributor-image-container {
+    padding: 0;
+  }
+
+  .testimonials-carousel .owl-nav {
+    left: 50%;
+    transform: translate(-50%, 100%);
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -485,8 +530,29 @@ h3 {
 
   .video-btn {
     transform: scale(0.8) translate(-45%);
-    left: 50%;
+    left: 46%;
   }
+
+  .about-image {
+    padding-top: 50px;
+  }
+
+  .work-end-btn {
+    text-align: end;
+    padding-right: 20px;
+  }
+
+  .brands-clients {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 30px;
+    padding-bottom: 60px;
+  }
+
+  .client-brand {
+    margin-bottom: 30px;
+  }
+
 }
 
 
