--- a/gravity/css/main.css
+++ b/gravity/css/main.css
@@ -106,7 +106,7 @@ h3 {
   position: absolute;
   top: 45%;
   left: -8%;
-  box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
+  /*box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);*/
   display: flex;
   justify-content: center;
   align-items: center;
