--- a/onsharp-copy/css/style.css
+++ b/onsharp-copy/css/style.css
@@ -38,9 +38,15 @@ h3 {
   margin-right: 42px;
   padding: 0 !important;
   color: #58595b;
+  transition: 0.3s;
 }
 
 .main-navigation-link:hover {
+  color: #58595b;
+}
+
+.main-navigation-link.main-button:hover {
+  background: #e17622;
   color: #58595b;
 }
 
@@ -114,15 +120,16 @@ h3 {
   padding-bottom: 20px;
 }
 
-.what-card-link {
+.card-link {
   color: inherit;
   font-size: 24px;
   font-weight: 600;
   padding-bottom: 25px;
 }
 
-.what-card-link:hover {
+.card-link:hover {
   color: inherit;
+  text-decoration: underline;
 }
 
 .what-card-learn-more {
@@ -175,7 +182,7 @@ h3 {
 .serve-title__line {
   height: 4px;
   background: #f58025;
-  width: 95%;
+  width: 90%;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -185,7 +192,7 @@ h3 {
   position: relative;
   border-radius: 0.5em;
   top: 30px;
-  transition: 0.4s;
+  transition: 0.3s;
 }
 
 .serve-title__btn:hover {
@@ -198,8 +205,90 @@ h3 {
   padding-left: 25px;
 }
 
-.serve-cards {
-  display: flex;
-  justify-content: space-between;
-  padding: 100px 0 0 0;
+.serv-card-row .col-md-4 {
+  padding: 0;
 }
+
+.serve-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+
+.serve-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #f58025;
+  margin-bottom: 35px;
+}
+
+.serve-image-bg {
+  z-index: -1;
+  font-size: 120px;
+}
+
+.serve-image-front {
+  width: 70px;
+  height: 70px;
+  position: absolute;
+}
+
+.serve-card-text {
+  padding: 0 20px 30px 20px;
+}
+
+.serve-card .what-card-learn-more {
+  position: absolute;
+  bottom: 0;
+}
+
+.subscribe {
+  width: 100%;
+  height: 442px;
+  background: url(../img/glasses-min.jpg) no-repeat center center / cover;
+  text-align: center;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+}
+
+.subscribe-title {
+  font-size: 65.8px;
+  font-family: Montserrat,sans-serif;
+  font-weight: 600;
+}
+
+.subscribe-text {
+  font-size: 20px;
+  margin: 1em 0;
+}
+
+.subscribe-btn {
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 1em;
+  padding: 1em 2em;
+  background: #58595b;
+  color: #fff !important;
+  border: 1px solid #58595b;
+  border-width: 1px 0;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  border-radius: 0.5em;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
+  transition: 0.3s;
+}
+
+.subscribe-btn:hover {
+  text-decoration: none;
+  background: #606163;
+}
+
+
+
