--- a/onsharp-copy/css/style.css
+++ b/onsharp-copy/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background: #f9f9f9;
+}
+
 body, button, input, optgroup, select, textarea {
   color: #626262;
   font-size: 15px;
@@ -5,6 +9,14 @@ body, button, input, optgroup, select, textarea {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: auto;
   line-height: 1.7333;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+p {
+  font-family: Open Sans;
 }
 
 ul {
@@ -15,10 +27,14 @@ h3 {
   font-size: 32px;
 }
 
+.header-section {
+  padding-bottom: 110px;
+}
+
 .site-header {
   width: 100%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 21px;
+  padding-bottom: 21px;
   position: fixed;
   border-bottom: 1px solid #e6e6e6;
   z-index: 999;
@@ -31,6 +47,7 @@ h3 {
 }
 
 .main-navigation-link {
+  font-family: Montserrat,sans-serif !important;
   font-size: .75rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -53,13 +70,14 @@ h3 {
 .main-button {
   border-bottom: none!important;
   color: #ffffff!important;
-  padding: 1em 2em !important;
+  padding: 0.88em 1.95em !important;
   background: #f58025;
   border: 1px solid #f58025;
   -webkit-border-radius: 0.25em;
   -moz-border-radius: 0.25em;
   border-radius: 0.25em;
   margin-right: 0;
+  font-family: Open Sans;
 }
 
 .header-section {
@@ -80,7 +98,7 @@ h3 {
   color: #fff;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   font-size: 20px;
-  padding-bottom: 2em;
+  padding-bottom: 2.2em;
   padding-top: 3px;
 }
 
@@ -91,7 +109,7 @@ h3 {
 .what-we-do-title__label {
   line-height: 1.4em;
   font-weight: 600;
-  margin-top: 50px;
+  margin-top: 53px;
   margin-bottom: 25px;
 }
 
@@ -133,6 +151,7 @@ h3 {
 }
 
 .what-card-learn-more {
+  font-family: Open Sans;
   padding-top: 10px;
   font-size: 18px;
   color: #f58025;
@@ -144,7 +163,7 @@ h3 {
 
 .location-numbers {
   background: #222222;
-  padding: 60px 0 120px;
+  padding: 60px 0 110px;
   margin-top: 20px;
 }
 
@@ -157,7 +176,7 @@ h3 {
 
 .location-text {
   color: #f58025;
-  font-size: 15pt;
+  font-size: 16pt;
 }
 
 .serve {
@@ -265,6 +284,7 @@ h3 {
 .subscribe-text {
   font-size: 20px;
   margin: 1em 0;
+  letter-spacing: -0.02em;
 }
 
 .subscribe-btn {
@@ -273,7 +293,7 @@ h3 {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 1em;
-  padding: 1em 2em;
+  padding: 0.9em 1.93em;
   background: #58595b;
   color: #fff !important;
   border: 1px solid #58595b;
@@ -289,6 +309,213 @@ h3 {
   text-decoration: none;
   background: #606163;
 }
+
+.companies {
+  background: white;
+  height: 100%;
+  padding-bottom: 50px;
+}
+
+.company-cards-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.company-image {
+  width: 100%;
+}
+
+.section-start {
+  cursor: pointer;
+  background-color: rgb(245, 128, 37);
+  height: 400px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.section-start-link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.ready-start-title {
+  margin-bottom: 0;
+  font-size: 65.8px;
+  color: #fff!important;
+  font-family: Montserrat,sans-serif;
+  font-weight: 600;
+}
+
+.ready-start-text {
+  margin: 1em 0;
+  font-size: 20px;
+  color: #fff!important;
+}
+
+.ready-start-title:hover, .ready-start-text:hover {
+  text-decoration: none;
+}
+
+.start-btn {
+  color: #f58025 !important;
+  box-sizing: border-box;
+  font-size: 1em;
+  padding: 0.97em 1.86em;
+  background: white;
+  border-radius: 0.5em;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
+}
+
+.start-btn:hover {
+  text-decoration: none;
+}
+
+.addresses {
+  display: flex;
+  position: absolute;
+  width: 100vw;
+  height: 357px;
+  padding: 0;
+  margin: 0;
+}
+
+.address-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  height: 357px;
+  width: 33.33%;
+  text-align: center;
+}
+
+.address-city {
+  font-family: Montserrat,sans-serif;
+  font-weight: 600;
+  font-size: 32.3px;
+  color: #f6f6f6;
+}
+
+.address-exact {
+  color: #f6f6f6;
+  margin: 0.7em 0 1em 0;
+  font-size: 16px;
+}
+
+.address-tel a, .address-tel a:hover, .partner-link {
+  color: #f58025;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: Open Sans;
+}
+
+.footer {
+  margin-top: 357px;
+  height: 696px;
+  width: 100%;
+  background: #373737;
+  padding-top: 30px;
+}
+
+.footer-address {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-address.not-first {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%);
+  width: 100%;
+
+}
+
+.footer-address .address-tel a {
+  font-size: 15px;
+}
+
+.footer-logo {
+  padding-top: 25px;
+  padding-bottom: 55px;
+}
+
+.footer-address-text {
+  color: white;
+  margin: 0;
+}
+
+.footer-contact-btn {
+  margin-top: 26px;
+  padding: 7px 15px;
+  background: white;
+  font-size: 11px;
+  color: #58595b;
+  border-radius: 6px;
+  font-family: sans-serif !important;
+  text-decoration: none;
+}
+
+.contacts-row {
+  margin-top: 83px;
+}
+
+.email-contact-title {
+  color: #fff;
+  font-size: 1.0666em;
+  font-weight: 500;
+  font-family: Montserrat,sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+.email-contact-form {
+  font-family: arial, helvetica, sans-serif;
+}
+
+.email-contact-form label {
+  color: white;
+  font-size: 13px;
+  margin: 2px 0;
+}
+
+.email-contact-form input {
+  margin-bottom: 36px;
+  height: 40px;
+}
+
+.email-contact-form input::placeholder {
+  font-size: 15px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: #b2b2b2;
+}
+
+.email-contact-submit {
+  font-size: 12px;
+  font-family: arial, helvetica, sans-serif;
+  font-weight: 700;
+  padding: 0.7em 2em !important;
+}
+
+.contacts-image-partner {
+  width: 200px;
+}
+
+.partner-text {
+  color: white;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+
+
 
 
 
