--- a/onsharp-copy/css/style.css
+++ b/onsharp-copy/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #f9f9f9;
+  background: #fcfcfc;
 }
 
 body, button, input, optgroup, select, textarea {
@@ -16,7 +16,7 @@ a:hover {
 }
 
 p {
-  font-family: Open Sans;
+  font-family: Open Sans, sans-serif;
 }
 
 ul {
@@ -77,7 +77,7 @@ h3 {
   -moz-border-radius: 0.25em;
   border-radius: 0.25em;
   margin-right: 0;
-  font-family: Open Sans;
+  font-family: Open Sans, sans-serif;
 }
 
 .header-section {
@@ -151,7 +151,7 @@ h3 {
 }
 
 .what-card-learn-more {
-  font-family: Open Sans;
+  font-family: Open Sans, sans-serif;
   padding-top: 10px;
   font-size: 18px;
   color: #f58025;
@@ -410,7 +410,7 @@ h3 {
   color: #f58025;
   text-decoration: none;
   font-size: 16px;
-  font-family: Open Sans;
+  font-family: Open Sans, sans-serif;
 }
 
 .footer {
@@ -551,7 +551,7 @@ h3 {
 .all-right-reserved-container {
   color: #b4b5b8;
   font-size: 13px;
-  font-family: Open Sans;
+  font-family: Open Sans, sans-serif;
   padding-top: 55px;
 }
 
@@ -569,3 +569,20 @@ h3 {
 .all-right-reserved-container a:hover {
   color: white;
 }
+
+@media screen and (max-width: 1200px) {
+  .site-header {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .header-title__label {
+    line-height: 1.375em;
+  }
+
+  .what-we-do {
+  }
+}
+
+
+
