Добавлен первый заказ

--- a/onsharp-copy/css/style.css
+++ b/onsharp-copy/css/style.css
@@ -41,6 +41,10 @@ h3 {
   background: white;
 }
 
+#mobileNavbar.collapse:not(.show) {
+  display: none!important;
+}
+
 .navbar-collapse.collapse.show .site-header {
   padding-bottom: 0;
 }
