--- a/onsharp-copy/css/style.css
+++ b/onsharp-copy/css/style.css
@@ -33,8 +33,8 @@ h3 {
 
 .site-header {
   width: 100%;
-  padding-top: 21px;
-  padding-bottom: 21px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   position: fixed;
   border-bottom: 1px solid #e6e6e6;
   z-index: 999;
@@ -75,17 +75,27 @@ h3 {
 }
 
 #mobileNavbar .navbar-nav .nav-item {
+  height: 51px;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid;
   border-color: #8b9b93;
+  font-family: Montserrat,sans-serif;
+  font-size: 12px;
+  letter-spacing: 1px;
+  line-height: 3.4;
 }
 
 #mobileNavbar .navbar-nav .nav-item a {
   color: white;
+  transition: 0.3s;
+}
+
+#mobileNavbar .navbar-nav .nav-item a:hover {
+  color: #f58025;
 }
 
 .main-navigation-link {
@@ -614,7 +624,7 @@ h3 {
 
 @media screen and (max-width: 1200px) {
   .header-logo {
-    padding-left: 15px;
+    margin-left: 15px;
   }
 
   .header-title__label {
