Карусель на главном экране добавил в watch group

--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -522,10 +522,11 @@ a, a:hover {
 
 .main-page-products-carousel-image-container {
   transition: 0.4s;
+  position: relative;
 }
 
-.main-page-products-carousel-image-container:hover {
-  transform: translateY(-3%);
+.main-page-products-carousel__item:hover .main-page-products-carousel-image-container {
+  transform: translateY(-10px);
 }
 
 .main-page-products-carousel-image-container .out-of-stock {
@@ -543,7 +544,7 @@ a, a:hover {
 }
 
 .main-page-products-carousel-image-container .fast-view-label {
-  transition: 0.4s;
+  transition: transform 0.4s, opacity 0.3s;
   color: white;
   font-weight: 500;
   font-size: 0.9em;
@@ -556,6 +557,7 @@ a, a:hover {
   text-transform: uppercase;
   text-align: center;
   transform: translateY(100%);
+  opacity: 0;
 }
 
 .main-page-products-carousel-image-container .fast-view-label:hover {
@@ -564,4 +566,58 @@ a, a:hover {
 
 .main-page-products-carousel__item:hover .fast-view-label {
   transform: translateY(0);
+  opacity: 1;
+}
+
+.main-page-products-carousel__product-name {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.4s;
+}
+
+.main-page-products-carousel__product-name * {
+  margin: 0.2em 0;
+}
+
+.main-page-products-carousel__item:hover .main-page-products-carousel__product-name {
+  transform: translateY(-10px);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.main-page-products-carousel__product-name .product-brand {
+  color: #f1f1f1;
+  opacity: 0.7;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
+.main-page-products-carousel__product-name .product-name {
+  line-height: 1.3;
+  font-size: 16px;
+  color: white;
+  font-weight: 300;
+}
+
+.main-page-products-carousel__product-name .product-price {
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.main-page-products-carousel__product-name .product-more-information {
+  text-transform: uppercase;
+  color: #446084;
+  border: 2px solid #446084;
+  transition: 0.4s;
+  font-size: 12px;
+  padding: 5px 13px;
+  font-weight: 600;
+  width: 50%;
+}
+
+.main-page-products-carousel__product-name .product-more-information:hover {
+  background: #446084;
+  color: white;
 }
