--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -274,7 +274,9 @@ a, a:hover {
 .shopping-cart-list-item__close-btn {
   position: absolute;
   right: 0;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 24px;
   height: 24px;
   font-size: 15px !important;
@@ -305,7 +307,7 @@ a, a:hover {
 .shopping-cart-dropdown_show-cart, .shopping-cart-dropdown_order {
   display: block;
   padding: 0;
-  color: white;
+  color: white !important;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
@@ -314,7 +316,7 @@ a, a:hover {
   min-height: 2.5em;
   padding: 0 1.2em;
   max-width: 100%;
-  font-weight: bolder;
+  font-weight: 600;
   font-size: 0.97em;
   margin-top: 0.5em;
 }
@@ -590,6 +592,7 @@ a, a:hover {
   color: #f1f1f1;
   opacity: 0.7;
   font-size: 10px;
+  padding-top: 1.5em;
   text-transform: uppercase;
 }
 
@@ -620,4 +623,10 @@ a, a:hover {
 .main-page-products-carousel__product-name .product-more-information:hover {
   background: #446084;
   color: white;
+}
+
+.footer-language-choose-container current-language {
+  cursor: pointer;
+  border: 1px solid #cdcdcd;
+  border-radius: 0;
 }
