--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -61,6 +61,22 @@ a, a:hover {
   background: white;
 }
 
+.open-mobile-menu-btn {
+  height: 33px;
+  width: 33px;
+  justify-content: center;
+  align-items: center;
+  background: #446084;
+  border-radius: 50%;
+  display: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.open-mobile-menu-btn:hover {
+  box-shadow: inset 0 0 0 100px rgba(0,0,0,.2);
+}
+
 .logo a {
   display: block;
   color: #446084;
@@ -347,9 +363,10 @@ a, a:hover {
 
 .sub-header-container {
   background-color: #424242;
+  transform: none;
 }
 
-.sub-header {
+.sub-header-links {
   display: flex;
 }
 
@@ -372,6 +389,10 @@ a, a:hover {
 
 .sub-header__item__link:hover {
   color: white;
+}
+
+.sub-header-login-link {
+  display: none;
 }
 
 .sub-header-search-container {
@@ -407,6 +428,28 @@ a, a:hover {
   left: auto;
   right: -15px;
   top: 100%;
+}
+
+.close-mobile-header-btn {
+  position: absolute;
+  left: 33%;
+  width: 67%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  color: rgba(255, 255, 255, 0.5);
+  /*display: none;*/
+}
+
+.close-mobile-header-btn i {
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.close-mobile-header-btn i:hover {
+  color: rgba(255, 255, 255, 1);
 }
 
 .main-page__main-carousel__item {
@@ -757,17 +800,80 @@ a, a:hover {
 
 
 @media (max-width: 991px) {
+  .open-mobile-menu-btn {
+    display: flex;
+  }
+
+  .logo a {
+    text-align: center;
+    font-size: 20px !important;
+  }
+
+  .main-header {
+    flex-wrap: nowrap;
+  }
+  
+  .main-header__find-form {
+    display: none;
+  }
+  
   .sub-header-container {
-    background: rgba(255,255,255,.95);
+    background: rgba(11, 11, 11, 0.6);
     position: fixed;
-    z-index: 9998;
+    z-index: 9997;
     height: 100%;
     width: 100%;
     top: 0;
+    left: -150%;
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+
+  .sub-header {
+    background: rgba(255,255,255,.95);
+    height: 100%;
+    left: 0;
+    position: absolute;
+    width: 33%;
+    min-width: 260px;
+    z-index: 9998;
+    transform: translateX(-110%);
     transition: 0.2s;
   }
+
+  .sub-header__item {
+    padding-left: 20px;
+    margin: 0;
+    width: 100%;
+    transition: 0.4s;
+  }
+
+  .sub-header__item:hover {
+    background: rgba(0, 0, 0, 0.1);
+  }
+
+  .sub-header-search-container {
+    width: 100%;
+  }
+
+  .sub-header-search-container, .header__find-form {
+    position: relative !important;
+  }
   
-  .header-shopping-cart__price, .header-language-dropdown, .header-number, .header-mail {
+  .sub-header-search-container .header-search-dropdown {
+    opacity: 1;
+    left: 0px !important;
+    right: -15px;
+    position: relative;
+    padding: 0;
+    width: 100%;
+    box-shadow: none;
+    border: 0;
+    background: transparent;
+    min-width: auto;
+  }
+
+  .header-shopping-cart__price, .header-language-dropdown, .header-number, .header-mail, .sub-header__find, .main-header .header__find-form {
     display: none;
   }
 
@@ -775,15 +881,21 @@ a, a:hover {
     position: absolute;
   }
 
-  .sub-header {
-    display: flex;
+  .sub-header-links {
     flex-direction: column;
     position: relative;
-    z-index: 9999;
   }
 
   .sub-header__item__link {
     color: rgba(102,102,102,.85);
+  }
+
+  .sub-header__item__link:hover {
+    color: black;
+  }
+
+  .sub-header-login-link {
+    display: block;
   }
 
   .main-page-carousel .owl-nav button {
@@ -804,5 +916,11 @@ a, a:hover {
 
   .footer-recently-watched-label {
     width: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .sub-header-search-container .header-search-dropdown .header__find-form__input::placeholder {
+    font-size: 12px;
   }
 }
