--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -264,6 +264,32 @@ a, a:hover {
   right: -15px;
 }
 
+.shopping-cart-dropdown__close-btn {
+  position: fixed;
+  width: 67%;
+  height: 100vh;
+  left: 15px;
+  top: 15px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: color 0.4s;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.shopping-cart-dropdown__close-btn:hover {
+  color: #fff;
+}
+
+.shopping-cart-dropdown__mobile-label {
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+  margin-bottom: 40px;
+  padding-top: 10px;
+  color: #555;
+}
+
 .shopping-cart-list {
   position: relative;
 }
@@ -444,7 +470,6 @@ a, a:hover {
   justify-content: flex-end;
   align-items: flex-start;
   color: rgba(255, 255, 255, 0.5);
-  /*display: none;*/
 }
 
 .close-mobile-header-btn i {
@@ -906,13 +931,15 @@ a, a:hover {
   }
 
   .shopping-cart-dropdown-container {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(11, 11, 11, 0.6);
     position: fixed;
     width: 100vw;
     height: 100vh;
     z-index: 9997;
-    left: 0;
+    left: -9999px;
+    opacity: 0;
     top: 0;
+    transition: opacity 0.2s;
   }
 
   .shopping-cart-dropdown {
@@ -928,6 +955,20 @@ a, a:hover {
     min-width: 220px;
     z-index: 9998;
     border: 0;
+    transition: 0.2s;
+    transform: translateX(110%);
+  }
+
+  .header-shopping-cart__text {
+    pointer-events: none;
+  }
+  
+  .header-shopping-cart {
+    cursor: pointer;
+  }
+
+  .shopping-cart-list-item__close-btn {
+    right: 5px;
   }
 
   .main-page-carousel .owl-nav button {
