--- a/watch group/css/main.css
+++ b/watch group/css/main.css
@@ -946,7 +946,7 @@ a, a:hover {
     background: rgba(255,255,255,.95);
     left: auto;
     top: 0;
-    right: -15px;
+    right: -5px !important;
     opacity: 1;
     height: 100%;
     min-height: 100vh;
